# interview_prep

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
sites/codility/prefix_sums/: min_avg_two_slice.cpp  min_avg_two_slice.hpp  min_avg_two_slice.test.cpp  num_zero_sub_arrays.cpp  num_zero_sub_arrays.hpp  num_zero_sub_arrays.test.cpp
topics/trees/: binary.cpp  binary.hpp  binary.test.cpp
